[tool.poetry]
name = "signal-processing-toolbox"
version = "0.0.0"
description = "Signal processing toolbox for deal with all kinds of signals."
authors = ["Ricardo Scremin Rizzatti"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13" 
numpy = "^1.26.1"
scipy = "^1.11.3"
plotly = "^5.17.0"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.10.1"
pre-commit = "^3.5.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
